simplify slf4j-scoped-mdc/pom.xml
Signed-off-by: ceki <ceki@qos.ch>